Made navbar non-sticky, changed the section separator

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <body>
     <nav
-      class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark bg-black"
+      class="navbar navbar-expand-lg navbar-dark bg-dark bg-black"
     >
       <nav class="navbar navbar-expand-lg navbar-dark"></nav>
       <a class="navbar-brand" href="#take-to-home"
@@ -72,24 +72,24 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#take-to-home">Home</a>
+            <a class="nav-link" href="#take-to-home"><strong>Home</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#take-to-about">About</a>
+            <a class="nav-link" href="#take-to-about"><strong>About</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#take-to-projects">Projects</a>
+            <a class="nav-link" href="#take-to-projects"><strong>Projects</strong></a>
           </li>
           <li class="nav-item">
             <a
               class="nav-link"
               href="images/Sampreet_Chawla_Resume.pdf"
               target="_blank"
-              >Resume</a
+              ><strong>Resume</strong></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#take-to-contact">Contact</a>
+            <a class="nav-link" href="#take-to-contact"><strong>Contact<strong></a>
           </li>
         </ul>
       </div>
@@ -101,18 +101,14 @@
       <section class="home-container">
         <div class="home title-div">
           <h1 class="home title">Sampreet K Chawla</h1>
-          <hr />
+          <hr id="orange-line"/>
           <h3 class="home sub-title">web developer</h3>
         </div>
         <a href="#"></a>
       </section>
 
       <!-- ABOUT ME CONTAINER -->
-      <div class="section-separator" id="take-to-about">
-        <!-- <a id="take-to-about"></a> -->
-        <img src="images/divider.png" alt="divider picture" />
-      </div>
-      <section class="about-container">
+      <section class="about-container" id="take-to-about">
         <header class="about-header">
           <h3 class="title about-title">About Me</h3>
         </header>
@@ -208,12 +204,15 @@
         <button id="myTopBtn" title="Go to top">&#8679;</button>
       </section>
 
-      <!-- ALL PROJECTS -->
+     
 
-      <div class="section-separator" id="take-to-projects">
-        <img src="images/divider.png" alt="divider picture" />
+      <!-- Extra Div for Section Separator -->
+      <div>
+        <hr class="section-separator"/>
       </div>
-      <section class="projects-container">
+
+       <!-- ALL PROJECTS -->
+      <section class="projects-container" id="take-to-projects">
         <header class="projects-header">
           <h3 class="title projects-title">All Projects</h3>
         </header>
@@ -223,10 +222,7 @@
       </section>
 
       <!-- CONTACT FORM -->
-      <div class="section-separator" id="take-to-contact">
-        <img src="images/divider.png" alt="divider picture" />
-      </div>
-      <section class="contact-container">
+      <section class="contact-container" id="take-to-contact">
         <header class="contact-header">
           <!-- <a href="#" id="contact"></a>  -->
           <h3 class="title contact-title" id="contact-title">
