Formatted project flip-cards, Removed the divider images

--- a/index.html
+++ b/index.html
@@ -134,7 +134,39 @@
           <div class="skills-title">
             <h4>Technologies I Use</h4>
           </div>
-          <div class="about-skills">
+          <div class="about-skills">            
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/java.png" class="skill-icon" />
+              <div class="skill-name">Java</div>
+            </div>
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/spring-boot.jpg" class="skill-icon" />
+              <div class="skill-name">Spring Boot</div>
+            </div>            
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/react.png" class="skill-icon" />
+              <div class="skill-name">React</div>
+            </div>
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/node-express.png" class="skill-icon" />
+              <div class="skill-name">Node.js/Express</div>
+            </div>            
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/mongodb.png" class="skill-icon" id="node" />
+              <div class="skill-name">MongoDB</div>
+            </div>            
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/postgresql.png" class="skill-icon" />
+              <div class="skill-name">PostgreSQL</div>
+            </div>            
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/ruby.png" class="skill-icon" />
+              <div class="skill-name">Ruby</div>
+            </div>
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/ruby_on_rails.png" class="skill-icon" />
+              <div class="skill-name">Ruby on Rails</div>
+            </div>
             <div class="col-sm-3 col-xs-6 text-center skill-div">
               <img src="images/html5.png" class="skill-icon" />
               <div class="skill-name">HTML5</div>
@@ -163,38 +195,6 @@
               <img src="images/unix.png" class="skill-icon" />
               <div class="skill-name">Unix</div>
             </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/react.png" class="skill-icon" />
-              <div class="skill-name">React</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/node-express.png" class="skill-icon" />
-              <div class="skill-name">Node.js/Express</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/java.png" class="skill-icon" />
-              <div class="skill-name">Java</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/spring-boot.jpg" class="skill-icon" />
-              <div class="skill-name">Spring Boot</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/ruby.png" class="skill-icon" />
-              <div class="skill-name">Ruby</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/ruby_on_rails.png" class="skill-icon" />
-              <div class="skill-name">Ruby on Rails</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/postgresql.png" class="skill-icon" />
-              <div class="skill-name">PostgreSQL</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/mongodb.png" class="skill-icon" id="node" />
-              <div class="skill-name">MongoDB</div>
-            </div>
           </div>
         </main>
         <button id="myTopBtn" title="Go to top">&#8679;</button>
@@ -210,7 +210,8 @@
        <!-- PROJECTS -->
       <section class="projects-container" id="take-to-projects">
         <header class="projects-header">
-          <h3 class="title projects-title">Projects</h3>
+          <h3 class="title projects-title">Projects <br/><span id="projects-more">(click image for info)</span></h3>
+          
         </header>
         <main class="projects-main">
           <!--Dynamic Content goes here -->
