Minor format change for project descriotion

--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
                 target="_blank"
                 style="float: right; margin: 10px"
                 >Resume</a
-              >
-            </h5>
+              ><br/>
+            </h5>            
           </div>
           <div class="skills-title">
+            <!-- <div>I am an aspiring full-stack developer who has rich back-end experience. I am currently in Westfield (IN), and am willing to relocate or work remotely.</div><br/> -->
             <h4>Technologies I Use</h4>
           </div>
           <div class="about-skills">            
