Chnaged to save contact details usng noCodeAPI instead of sheetsdb.io due the email issue

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
                 id="full-name"
                 size="25"
                 maxlength="50"
-                required
+                required='required'
+                autocomplete="off"
               />
             </div>
             <div class="contact email">
@@ -249,7 +250,8 @@
                 id="email"
                 size="25"
                 maxlength="50"
-                required
+                required='required'
+                autocomplete="off"
               />
             </div>
             <div class="contact message">
@@ -261,6 +263,8 @@
                 maxlength="500"
                 form="contact-form"
                 placeholder="Message"
+                required='required'
+                autocomplete="off"
               ></textarea>
             </div>
             <div class="contact submit">
