Updated the gmail id in contact section

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               ></a>
               |
               <a
-                href="mailto:sampreetkc@gmail.com"
+                href="mailto:sampreet.chawla@gmail.com"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Email <i class="fa fa-envelope" aria-hidden="true"></i
