Formatted the comments for Dev tools.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">  
-    <!-- 
-        Hello there!
-        If you're interested in seeing how I coded something on this site, feel free to send me a message using the contact form at the bottom of the page. 
-        I would love answering your questions on the code, and i look forward to hearing from you. Please feel feel to message or connect with me on LinkedIn - https://www.linkedin.com/in/sampreetchawla/
-        if you don't want ot reach out but want me to know you read this, use the contact form to send me your favorite book. Currently I am reading - Eat That frog - By Brian Tracy, as I would like to learn to focus better.  
-        ~ Sampreet
-    -->
+<!-- 
+
+Hello there!
+
+If you're interested in seeing how I coded something on this site, feel free to send me a message using the contact form at the bottom of the page. I would love answering your questions on the code, and i look forward to hearing from you. Please feel feel to message or connect with me on LinkedIn - https://www.linkedin.com/in/sampreetchawla/
+
+If you don't want ot reach out but want me to know you read this, use the contact form to send me your favorite book. Currently I am reading - Eat That frog - By Brian Tracy, as I would like to learn to focus better.  
+
+~ Sampreet
+
+-->
   <head>
     <meta charset="UTF-8" />
     <title>Sampreet K Chawla</title>
