Minor technology updates

--- a/index.html
+++ b/index.html
@@ -145,7 +145,15 @@ If you don't want ot reach out but want me to know you read this, use the contac
           <div class="skills-title">
             <h4>Technologies I Use</h4>
           </div>
-          <div class="about-skills">            
+          <div class="about-skills">   
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/react.png" class="skill-icon" />
+              <div class="skill-name">ReactJS</div>
+            </div>
+            <div class="col-sm-3 col-xs-6 text-center skill-div">
+              <img src="images/node-express.png" class="skill-icon" />
+              <div class="skill-name">Node.js/Express</div>
+            </div>           
             <div class="col-sm-3 col-xs-6 text-center skill-div">
               <img src="images/java.png" class="skill-icon" />
               <div class="skill-name">Java</div>
@@ -153,15 +161,7 @@ If you don't want ot reach out but want me to know you read this, use the contac
             <div class="col-sm-3 col-xs-6 text-center skill-div">
               <img src="images/spring-boot.jpg" class="skill-icon" />
               <div class="skill-name">Spring Boot</div>
-            </div>            
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/react.png" class="skill-icon" />
-              <div class="skill-name">React</div>
-            </div>
-            <div class="col-sm-3 col-xs-6 text-center skill-div">
-              <img src="images/node-express.png" class="skill-icon" />
-              <div class="skill-name">Node.js/Express</div>
-            </div>            
+            </div> 
             <div class="col-sm-3 col-xs-6 text-center skill-div">
               <img src="images/mongodb.png" class="skill-icon" id="node" />
               <div class="skill-name">MongoDB</div>
