Updated Brand statement in portfolio about section and pdf resume

--- a/index.html
+++ b/index.html
@@ -127,12 +127,10 @@ If you don't want ot reach out but want me to know you read this, use the contac
           </div>
           <div class="about-brand">
             <h5 class="brand-statement">
-              Avid learner and a <span class="orange">web developer</span>, who is passionate about bringing ideas to life with
-              coding. I take an agile approach to identifying challenges,
-              finding the right solutions, and creating great user experiences.
-              I am looking forward to joining a collaborative and inclusive team
-              that is focused on innovation, growth, and delighting
-              customers.<br />
+              I am a dedicated, result-oriented <span class="orange">web developer</span> who is passionate about 
+              bringing ideas to life with coding. I am also an avid learner with recent experience in MERN and 
+              Java projects, and eager to explore new technologies. I am looking to join a flexible, collaborative 
+              and inclusive team that is focused on innovation, growth, and delighting customers. <br />
               <a
                 href="images/Sampreet_Chawla_Resume.pdf"
                 class="btn btn-primary"
