Added - onclick of home title goes to about me, increased My Resume link size, added extra margin to project-card

--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@ If you don't want ot reach out but want me to know you read this, use the contac
       <!-- LANDING PAGE / HOME PAGE -->
       <section class="home-container">
         <div class="home title-div">
+          <a href="#take-to-about">
           <h1 class="home title" data-animate id="heading-animate" >Sampreet Chawla</h1>
           <hr id="orange-line"/>
           <h3 class="home sub-title" data-animate id="sub-heading-animate">software engineer</h3>
+        </a>
         </div>
         <a href="#"></a>
       </section>
@@ -133,10 +135,9 @@ If you don't want ot reach out but want me to know you read this, use the contac
               and inclusive team that is focused on innovation, growth, and delighting customers. <br />
               <a
                 href="images/Sampreet_Chawla_Resume.pdf"
-                class="btn btn-primary"
+                class="btn btn-primary resume"
                 target="_blank"
-                style="float: right; margin: 10px"
-                >Resume</a
+                >My Resume</a
               ><br/>
             </h5>            
           </div>
